--- a/decode.html
+++ b/decode.html
@@ -18,7 +18,7 @@
     <script src="script.js"></script>
     <nav class="shadow navbar navbar-expand-lg navbar-light bg-light">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand" href="https://github.com/saikumarjetti/go-wasm">
           <svg
             xmlns="http://www.w3.org/2000/svg"
             width="45"
