--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <script src="wasm_exec.js"></script>
     <nav class="shadow navbar navbar-expand-lg navbar-light bg-light">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand" href="https://github.com/saikumarjetti/go-wasm">
           <svg
             xmlns="http://www.w3.org/2000/svg"
             width="45"
@@ -48,18 +48,18 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <div
-          class="collapse navbar-collapse justify-content-end me-3"
+          class="collapse navbar-collapse justify-content-center"
           id="navbarNavDropdown"
         >
           <ul class="navbar-nav">
-            <li class="nav-item mx-5">
+            <li class="nav-item m-md-3">
               <a href="./index.html">
                 <button type="button" class="btn-lg btn-outline-secondary">
                   Encode
                 </button>
               </a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item m-md-3">
               <a href="./decode.html">
                 <button type="button" class="btn-lg btn-outline-secondary">
                   Decode
@@ -101,12 +101,12 @@
               rows="3"
               cols="3"
             ></textarea>
-            <div id="txtlen">length : 0</div>
+            <div class=" " id="txtlen">length : 0</div>
           </div>
 
           <!-- passwoed -->
           <div class="form-group my-3">
-            <label for="password">Password</label>
+            <label class="my-1" for="password">Password</label>
             <input
               type="password"
               class="form-control"
@@ -114,7 +114,7 @@
               placeholder="Password"
             />
           </div>
-          <button class="btn btn-secondary my-3" onclick="encodeImage(this)">
+          <button class="btn btn-secondary my-1" onclick="encodeImage(this)">
             Encode
           </button>
         </div>
@@ -123,7 +123,7 @@
             <div class="form-label">Image preview</div>
             <img src="" id="finalImage" width="100%" height="300px" />
             <a id="download" href="" download>
-              <button class="btn btn-secondary my-4">Save Image</button>
+              <button class="btn btn-secondary my-3">Save Image</button>
             </a>
           </div>
         </div>
