--- a/decode.html
+++ b/decode.html
@@ -16,9 +16,9 @@
   <body>
     <script src="wasm_exec.js"></script>
     <script src="script.js"></script>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="shadow navbar navbar-expand-lg navbar-light bg-light">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand" href="https://github.com/saikumarjetti/go-wasm">
           <svg
             xmlns="http://www.w3.org/2000/svg"
             width="45"
@@ -33,7 +33,7 @@
           </svg>
           <div class="text-center">Github</div>
         </a>
-        <div class="fs-4">
+        <div class="d-none d-lg-block fw-normal fs-4">
           Hiding data in Image using Steganography with two-level security
           (using webAssembly)
         </div>
@@ -49,18 +49,18 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <div
-          class="collapse navbar-collapse justify-content-end me-3"
+          class="collapse navbar-collapse justify-content-center"
           id="navbarNavDropdown"
         >
           <ul class="navbar-nav">
-            <li class="nav-item mx-5">
+            <li class="nav-item m-md-3">
               <a href="./index.html">
                 <button type="button" class="btn-lg btn-outline-secondary">
                   Encode
                 </button>
               </a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item m-md-3">
               <a href="./decode.html">
                 <button type="button" class="btn-lg btn-outline-secondary">
                   Decode
